--- a/notebooks/chatbot.ipynb
+++ b/notebooks/chatbot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 89,
    "id": "1494d9ce",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 90,
    "id": "161879df",
    "metadata": {},
    "outputs": [],
@@ -28,12 +28,12 @@
     "OVERLAP_SIZE = 50\n",
     "MODEL_EMBEDDING = \"mistral-embed\"\n",
     "MODEL_GENERATION = \"mistral-small-2506\" #mistral small 3.2\n",
-    "BATCH_SIZE = 20 "
+    "BATCH_SIZE = 20"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 91,
    "id": "9050df51",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 92,
    "id": "f345e4cd",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of Markdown files in /Users/amelieartmann/Documents/devguard-chatbot: 73\n"
+      "Number of Markdown files in /Users/amelieartmann/Documents/devguard-chatbot/data/devguard: 45\n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 93,
    "id": "6f28eb38",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 94,
    "id": "c6edf65a",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 95,
    "id": "a83cec15",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 96,
    "id": "d184841f",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of better chunks: 168\n"
+      "Number of better chunks: 105\n"
      ]
     }
    ],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 97,
    "id": "fa6d6040",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 98,
    "id": "0edc1b54",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 99,
    "id": "fd377793",
    "metadata": {},
    "outputs": [],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": null,
    "id": "c2ce5869",
    "metadata": {},
    "outputs": [],
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 103,
    "id": "4deadf6c",
    "metadata": {},
    "outputs": [
@@ -297,13 +297,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DevGuard is a tool built by developers for developers to simplify vulnerability management. It aims to integrate security seamlessly into the software development lifecycle, making security practices accessible and efficient for everyone, regardless of their security expertise.\n"
+      "DevGuard is a tool designed to support and relieve developers in managing software vulnerabilities. It focuses on user-friendliness, simplicity, and automation to make vulnerability management an integral part of IT security processes in software development. Its main objectives include:\n",
+      "\n",
+      "1. **Developer-centredness and appropriateness**: Supporting developers who are generally not trained in IT security by making vulnerability management accessible and efficient.\n",
+      "2. **Automated and continuous security monitoring**: Enabling systematic, automatic, and continuous security checks (e.g., using SBOMs) and highly automated risk prioritization.\n",
+      "3. **Harmonisation, risk assessment, and standard-compliant logging**: Striving for structured and standardized processes in vulnerability management.\n",
+      "\n",
+      "DevGuard also aims to integrate security seamlessly into the software development lifecycle, ensuring that security practices are accessible and efficient for everyone, regardless of their security expertise.\n"
      ]
     }
    ],
    "source": [
     "# Example usage:\n",
-    "query = \"What is DevGuard?\"\n",
+    "query = \"What is DevGuard?\" \n",
     "top_k_results = retrieve_top_k(query, k=5)\n",
     "\n",
     "if top_k_results is not None:\n",
